either-java17: migrate to Java 17 proper
Java 17 has been released.  Migrate either-java17 from Java 16 with
`--enable-preview` option to Java 17 proper.  Note that Java 17 is an
LTS -- Long Term Support -- version of Java.